added javascript for the code

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="winner hide">
+      <h1 class="winnerText"></h1>
+    </div>
+    <h1>Tic-Tac-Toe</h1>
     <div class="container">
-      <h1>Tic-Tac-Toe</h1>
       <div class="game">
         <button class="boxes"></button>
         <button class="boxes"></button>
@@ -20,8 +23,8 @@
         <button class="boxes"></button>
         <button class="boxes"></button>
       </div>
-      <button class="reset">Reset Game</button>
     </div>
+    <button class="reset">Reset Game</button>
     <script src="script.js"></script>
   </body>
 </html>
